# slurp

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py  slurp.ini-example
slurp/: __main__.py  backlog.py  core.py  download.py  metadata.py  movie_guessit.py  plugin_types.py  search.py  util.py
slurp/plugins/: 1337x.py  deluge_rpc.py  rename.py  scene_names.py  torrentleech.py  trakt.py  tvdb.py  unrar.py
